# streamlit-mongo

./: LICENSE  README.md  pyproject.toml  requirements.txt  🏠_Home.py
connection/: mongo.py
pages/: 1_🔌_Connection.py  2_⚙️_Configuration.py  3_🦄_StreamY.py
src/.streamlit/: config.toml
src/connection/: __init__.py  mongo.py
src/pages/: 2_⚙️_Configuration.py
