[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["src/.streamlit", "src/media", "src/pages", "src/ðŸ _Home.py"]

[tool.hatch.build.targets.wheel]
packages = ["src/connection"]

[tool.hatch.build.targets.wheel.sources]
"src/connection" = "st_mongo_connection"

[tool.hatch.build]
skip-excluded-dirs = true

[project]
name = "st-mongo-connection"
version = "1.0.2"
dependencies = [
  "streamlit>=1.29.0",
  "pymongo>=4.6.0",
]
authors = [{name="Moris Doratiotto", email="me@moris.dev"},]
description = "Streamlit MongoDB Connector: An efficient connector for interfacing MongoDB with Streamlit apps"
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
]
keywords = ["streamlit", "mongo", "database"]

[project.urls]
Homepage = "https://github.com/Mortafix/streamlit-mongo"
Issues = "https://github.com/Mortafix/streamlit-mongo/issues"